--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-14.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-14.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Costco Stock Pullback Offers Lower Entry Into Inflation Winner
+  Costco Stock Pullback Offers Lower Entry Into Inflation Winner	Costco 股票回调提供更低的进入 Inflation Winner 的机会
 image: /assets/img/stock-of-the-day/2024-11-14.jpg
 date: 2024-11-14 16:12 -0800
 author: APARNA NARAYANAN
@@ -12,100 +12,126 @@ author: APARNA NARAYANAN
 
 
 
-**Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it pulls back near a buy point after an impressive run in 2024.
+**Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it pulls back near a buy point after an impressive run in 2024.  
+**Costco** （[COST）](https://research.investors.com/quote.aspx?symbol=COST) 是[当天的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为它在 2024 年令人印象深刻的表现后回落至买入点附近。
 
 
-On Wednesday, analysts at TD Cowen and Evercore ISI hiked their price targets on Costco stock to $975 and $1,010, respectively, FactSet shows. The latest consumer prices data that day showed slow progress in the Fed's fight to tame inflation.
+On Wednesday, analysts at TD Cowen and Evercore ISI hiked their price targets on Costco stock to $975 and $1,010, respectively, FactSet shows. The latest consumer prices data that day showed slow progress in the Fed's fight to tame inflation.  
+FactSet 显示，周三，TD Cowen 和 Evercore ISI 的分析师将 Costco 股票的目标价分别上调至 975 美元和 1,010 美元。当天最新的消费者价格数据显示，美联储抑制通胀的斗争进展缓慢。
 
 
-Retail Stocks: Inflation, Thanksgiving, Earnings
-------------------------------------------------
+Retail Stocks: Inflation, Thanksgiving, Earnings零售股：通货膨胀、感恩节、收益
+---------------------------------------------------------------
 
 
-Several years of inflation have brought winners and losers among retail stocks.
+Several years of inflation have brought winners and losers among retail stocks.  
+几年的通货膨胀为零售股带来了赢家和输家。
 
 
-Both COST stock and Walmart are inflation winners. As Thanksgiving and Black Friday shopping ramps up, consumers continue to look for value and to spend on essential items while foregoing discretionary purchases and splurges.
+Both COST stock and Walmart are inflation winners. As Thanksgiving and Black Friday shopping ramps up, consumers continue to look for value and to spend on essential items while foregoing discretionary purchases and splurges.  
+COST 股票和沃尔玛都是通货膨胀的赢家。随着感恩节和黑色星期五购物的增加，消费者继续寻找价值并花钱购买必需品，同时放弃随意购买和挥霍。
 
 
-Incoming President Donald Trump's economic policies leave unclear the direction of consumer spending and inflation in years ahead.
+Incoming President Donald Trump's economic policies leave unclear the direction of consumer spending and inflation in years ahead.  
+即将上任的总统唐纳德·特朗普的经济政策使未来几年消费者支出和通货膨胀的方向不明朗。
 
 
-**Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) kicked off superstore retail earnings season with [solid results on Tuesday](https://www.investors.com/news/home-depot-earnings-q3-home-depot-lowes/). Investors are closely watching the state of consumer financial health.
+**Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) kicked off superstore retail earnings season with [solid results on Tuesday](https://www.investors.com/news/home-depot-earnings-q3-home-depot-lowes/). Investors are closely watching the state of consumer financial health.  
+**家得宝** （[HD](https://research.investors.com/quote.aspx?symbol=HD)） [周二以稳健的业绩](https://www.investors.com/news/home-depot-earnings-q3-home-depot-lowes/)拉开了超市零售收益季的序幕。投资者正在密切关注消费者的财务状况。
 
 
-**Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)) and **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) are due on Nov. 19. **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) is on deck Nov. 20 and **BJ's Wholesale Club** ([BJ](https://research.investors.com/quote.aspx?symbol=BJ)) follows on Nov. 21.
+**Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)) and **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) are due on Nov. 19. **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) is on deck Nov. 20 and **BJ's Wholesale Club** ([BJ](https://research.investors.com/quote.aspx?symbol=BJ)) follows on Nov. 21.  
+**Lowe's** （[LOW）](https://research.investors.com/quote.aspx?symbol=LOW) 和**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 将于 11 月 19 日到期。**Target** （[TGT](https://research.investors.com/quote.aspx?symbol=TGT)） 将于 11 月 20 日上场，**BJ's Wholesale Club** （[BJ）](https://research.investors.com/quote.aspx?symbol=BJ) 将于 11 月 21 日上场。
 
 
-Costco next reports in December. The company is famous for warehouse shopping, meaning cheap prices and bulk buys. It is growing online sales as well.
-
-
-
-
-Costco Stock Pullback Opportunity
----------------------------------
-
-
-Shares of Costco dipped 1.1% to 923.89 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). A recent pullback has returned Costco stock to just above a 923.83 flat-base [buy point](https://www.investors.com/ibd-university/how-to-buy/), according to [MarketSurge pattern recognition](https://marketsurge.investors.com). The base rides neatly on support at the chart's 50-day moving average.
-
-
-IBD added COST stock to [Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Nov. 8 as it broke out to record highs. Shares of the long-term retail stock winner are in buy range to 970.02.
+Costco next reports in December. The company is famous for warehouse shopping, meaning cheap prices and bulk buys. It is growing online sales as well.  
+Costco 下次报告将于 12 月公布。该公司以仓库购物而闻名，这意味着便宜的价格和批量购买。它的在线销售也在增长。
 
 
 
-The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for Costco stock remains below the peak of the flat base. An RS line moving to new highs along with the warehouse retailer's shares would send a positive sign. A rising RS line means that a stock is outperforming the S&P 500 index.
+
+Costco Stock Pullback OpportunityCostco 股票回调机会
+----------------------------------------------
 
 
-Other top retailers to watch can be found on the [IBD 50 list](https://research.investors.com/stock-lists/ibd-50/) of top growth stocks. They include **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), [which just posted blockbuster earnings](https://www.investors.com/news/cava-earnings-q3-cava-stock-chipotle-threat-sweetgreen/), and **Sprouts Farmers Markets** ([SFM](https://research.investors.com/quote.aspx?symbol=SFM)).
+Shares of Costco dipped 1.1% to 923.89 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). A recent pullback has returned Costco stock to just above a 923.83 flat-base [buy point](https://www.investors.com/ibd-university/how-to-buy/), according to [MarketSurge pattern recognition](https://marketsurge.investors.com). The base rides neatly on support at the chart's 50-day moving average.  
+Costco 的股价[今天在股市](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/)上下跌 1.1% 至 923.89。根据 [MarketSurge 模式识别](https://marketsurge.investors.com)，最近的回调使 Costco 股票回到略高于 923.83 的平底[买入点](https://www.investors.com/ibd-university/how-to-buy/)。该基础巧妙地支撑在图表的 50 天移动平均线的支撑位上。
 
 
-Costco Earnings: Membership Fee Boost?
---------------------------------------
+IBD added COST stock to [Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Nov. 8 as it broke out to record highs. Shares of the long-term retail stock winner are in buy range to 970.02.  
+IBD 于 11 月 8 日将 COST 股票添加到[排行榜](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)上，因为它突破了历史新高。长期零售股赢家的股价处于买入区间至 970.02。
 
 
-The [IBD Stock Checkup tool](https://research.investors.com/stock-checkup/nasdaq-costco-wholesale-cost.aspx) shows that Costco stock is currently the No. 2 discount retailer, behind only Walmart stock, in terms of its IBD [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1).
+
+The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for Costco stock remains below the peak of the flat base. An RS line moving to new highs along with the warehouse retailer's shares would send a positive sign. A rising RS line means that a stock is outperforming the S&P 500 index.  
+Costco 股票的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)保持在平底峰值下方。RS 线与仓库零售商的股价一起创下新高将发出积极信号。上升的 RS 线意味着一只股票的表现优于标准普尔 500 指数。
 
 
-Costco earns a Composite Rating of 81, RS Rating of 82 and EPS Rating of 86, all out of a best-possible 99. Walmart stock holds a Composite Rating of 87.
+Other top retailers to watch can be found on the [IBD 50 list](https://research.investors.com/stock-lists/ibd-50/) of top growth stocks. They include **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), [which just posted blockbuster earnings](https://www.investors.com/news/cava-earnings-q3-cava-stock-chipotle-threat-sweetgreen/), and **Sprouts Farmers Markets** ([SFM](https://research.investors.com/quote.aspx?symbol=SFM)).  
+其他值得关注的顶级零售商可以在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 顶级成长股名单中找到。它们包括[刚刚公布了重磅收益](https://www.investors.com/news/cava-earnings-q3-cava-stock-chipotle-threat-sweetgreen/)的 **Cava** （[CAVA）](https://research.investors.com/quote.aspx?symbol=CAVA) 和 **Sprouts Farmers Markets** （[SFM](https://research.investors.com/quote.aspx?symbol=SFM)）。
 
 
-In September, Costco beat earnings estimates for its fiscal fourth quarter. Net sales slightly missed views. The company reported cautious consumer spending on higher-ticket, discretionary items like furniture. Grocery and staples demand held up.
+Costco Earnings: Membership Fee Boost?Costco 收入：会员费提升？
+------------------------------------------------------
 
 
-During the Costco earnings call, CFO Gary Millerchip said most of the benefit from a recent membership fee increase will come later, in 2025 and into 2026.
+The [IBD Stock Checkup tool](https://research.investors.com/stock-checkup/nasdaq-costco-wholesale-cost.aspx) shows that Costco stock is currently the No. 2 discount retailer, behind only Walmart stock, in terms of its IBD [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1).  
+[IBD 股票检查工具](https://research.investors.com/stock-checkup/nasdaq-costco-wholesale-cost.aspx)显示，就其 IBD [综合评级](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1)而言，Costco 股票目前是第二大折扣零售商，仅次于沃尔玛股票。
 
 
-The annual Costco membership fee hikes, announced in July and effective Sept. 1, marked the first increase in seven years for customers in the U.S. and Canada.
+Costco earns a Composite Rating of 81, RS Rating of 82 and EPS Rating of 86, all out of a best-possible 99. Walmart stock holds a Composite Rating of 87.  
+Costco 的综合评分为 81，RS 评分为 82，EPS 评分为 86，全部满分 99。沃尔玛股票的综合评级为 87。
 
 
-For fiscal 2025, analysts project Costco earnings will grow almost 8% per share. That would compare to a 17% jump in fiscal 2024, which ended Sept. 1.
+In September, Costco beat earnings estimates for its fiscal fourth quarter. Net sales slightly missed views. The company reported cautious consumer spending on higher-ticket, discretionary items like furniture. Grocery and staples demand held up.  
+9 月，Costco 第四财季的收益超出预期。净销售额略低于浏览量。该公司报告称，消费者在家具等价格较高的非必需品上的支出持谨慎态度。杂货和主食需求保持稳定。
 
 
-Year to date, Costco stock has jumped almost 40% to all-time highs after the membership fee hike. Over the years, COST stock has proved to be a huge retail winner.
+During the Costco earnings call, CFO Gary Millerchip said most of the benefit from a recent membership fee increase will come later, in 2025 and into 2026.  
+在 Costco 财报电话会议上，首席财务官 Gary Millerchip 表示，最近会员费增加的大部分好处将在 2025 年和 2026 年晚些时候出现。
 
 
-IBD previously named Costco as [Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/costco-stock-buy-point-netflix-sharing-crackdown-peloton/) on Oct. 23 as it tried to break out.
+The annual Costco membership fee hikes, announced in July and effective Sept. 1, marked the first increase in seven years for customers in the U.S. and Canada.  
+Costco 年度会员费上调于 7 月宣布并于 9 月 1 日生效，这标志着美国和加拿大客户七年来的首次上调。
 
 
-*Please follow Aparna Narayanan on X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) for more coverage.*
+For fiscal 2025, analysts project Costco earnings will grow almost 8% per share. That would compare to a 17% jump in fiscal 2024, which ended Sept. 1.  
+分析师预计 2025 财年，Costco 的每股收益将增长近 8%。相比之下，截至 9 月 1 日的 2024 财年增长了 17%。
 
 
-**YOU MAY ALSO LIKE:**
+Year to date, Costco stock has jumped almost 40% to all-time highs after the membership fee hike. Over the years, COST stock has proved to be a huge retail winner.  
+年初至今，Costco 股价在会员费上调后上涨了近 40% 至历史新高。多年来，COST 股票已被证明是一个巨大的零售赢家。
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+IBD previously named Costco as [Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/costco-stock-buy-point-netflix-sharing-crackdown-peloton/) on Oct. 23 as it tried to break out.  
+IBD 此前在 10 月 23 日将 Costco 评为[今日股票](https://www.investors.com/research/ibd-stock-of-the-day/costco-stock-buy-point-netflix-sharing-crackdown-peloton/)，因为它试图突破。
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+*Please follow Aparna Narayanan on X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) for more coverage.  
+请在 X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) 上关注 Aparna Narayanan 以获得更多报道。*
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
+最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[Indexes Fall; Tesla Skids On This Trump EV Threat](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-skids-trump-ev-threat-palantir-nasdaq-listing/)
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
+寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+
+
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
+加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Indexes Fall; Tesla Skids On This Trump EV Threat  
+指数下跌;特斯拉在特朗普电动汽车威胁上滑行](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-skids-trump-ev-threat-palantir-nasdaq-listing/)
 
 
 
