--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-18.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-18.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  S&P 500 Leader, IBD Stock Of The Day, Breaks Out To Record Highs
+  S&P 500 Leader, IBD Stock Of The Day, Breaks Out To Record Highs	标准普尔 500 指数领跑者，今日 IBD 股票，突破历史新高
 image: /assets/img/stock-of-the-day/2024-11-18.jpg
 date: 2024-11-18 14:27 -0800
 author: HARRISON MILLER
@@ -12,23 +12,18 @@ author: HARRISON MILLER
 
 
 
-Vistra is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Monday. The energy company and S&P 500 leader broke out to record highs following its earnings results earlier this month. Vistra rose Monday.
+Vistra is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Monday. The energy company and S&P 500 leader broke out to record highs following its earnings results earlier this month. Vistra rose Monday.  
+Vistra 是周一[的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)。这家能源公司和标准普尔 500 指数领导者在本月早些时候公布财报后创下历史新高。瑞致达周一上涨。
 
 
 
 
-Irving, Texas-based **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)) is an energy supplier specializing in natural gas, coal and battery-storage facilities. The Fortune 500 company has expanded operations via additions of nuclear and solar facilities. These capitalize on booming energy demand to fulfill the enormous requirements needed for artificial intelligence.
+Irving, Texas-based **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)) is an energy supplier specializing in natural gas, coal and battery-storage facilities. The Fortune 500 company has expanded operations via additions of nuclear and solar facilities. These capitalize on booming energy demand to fulfill the enormous requirements needed for artificial intelligence.  
+总部位于德克萨斯州欧文的 **Vistra** （[VST](https://research.investors.com/quote.aspx?symbol=VST)） 是一家专门从事天然气、煤炭和电池存储设施的能源供应商。这家财富 500 强公司通过增加核能和太阳能设施来扩大业务。这些利用蓬勃发展的能源需求来满足人工智能所需的巨大需求。
 
 
-Artificial intelligence and the data centers needed to train the systems are expected to boost energy demand throughout this decade. In the U.S., McKinsey & Co. projects that data center energy demand will grow from around 4% currently, as percentage of total energy demand, to 11%-12% by 2030.
-
-
-
-
----
-
-
-**[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)**
+Artificial intelligence and the data centers needed to train the systems are expected to boost energy demand throughout this decade. In the U.S., McKinsey & Co. projects that data center energy demand will grow from around 4% currently, as percentage of total energy demand, to 11%-12% by 2030.  
+人工智能和训练系统所需的数据中心预计将在这十年内增加能源需求。在美国，麦肯锡公司预计，数据中心能源需求将从目前的约4%（占总能源需求的百分比）增长到2030年的11%-12%。
 
 
 
@@ -36,70 +31,97 @@ Artificial intelligence and the data centers needed to train the systems are exp
 ---
 
 
-In August, [Vistra announced](https://investor.vistracorp.com/2024-08-08-Vistra-Reports-Second-Quarter-2024-Results) it secured power purchase agreements from **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) for its new solar facilities. The company is building out a 200 MW site for Amazon in Texas and a 400 MW Illinois facility in a deal with Microsoft. Vistra also said it plans to develop up to 2,000 MW of gas-fueled electrical capacity in its home state of Texas to enhance grid reliability.
-
-
-Results Fuel Vistra Rally
--------------------------
-
-
-Meanwhile, VST stock rallied in early November on the back of its [Q3 beat](https://www.investors.com/news/sp-500-vistra-earnings-nuclear-industry/). Vistra saw earnings growth accelerate for the second quarter in a row, growing at a 322% clip, according to the company's 10-Q filing. Revenue leapt 54% to nearly $6.3 billion, while FactSet analysts expected just over $5 billion.
-
-
-Executives also noted that Vistra is "in discussions with two particular large companies about building new gas plants to support a data center project."
-
-
-In addition, Vistra raised its 2024 ongoing operations adjusted EBITDA target to $5 billion-$5.2 billion from $4.55 billion-$5.05 billion. The company initiated 2025 guidance, expecting adjusted EBITDA of $5.5 billion-$6.1 billion. Analysts put 2025 EBITDA at $5.76 billion.
-
-
-Along with its 2025 guidance, the Vistra board authorized an additional $1 billion of share repurchases. That brings the current share repurchase authorization to around $2.2 billion. It is expected to be utilized by the end of 2026.
-
-
-Breaks Out To Fresh High
-------------------------
+**[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.  
+AI 正在推动“核复兴”。比尔·盖茨 （Bill Gates） 和杰夫·贝佐斯 （Jeff Bezos） 也在其中。](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)**
 
 
 
-VST stock surged 4.3% Monday to break out to record highs, peaking at 152.64 in early trade.
+
+---
 
 
-Shares cleared a 149.80 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a short [double-bottom base](https://www.investors.com/how-to-invest/investors-corner/how-to-analyze-a-double-bottom-base/) with a high [handle](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/).
+In August, [Vistra announced](https://investor.vistracorp.com/2024-08-08-Vistra-Reports-Second-Quarter-2024-Results) it secured power purchase agreements from **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) for its new solar facilities. The company is building out a 200 MW site for Amazon in Texas and a 400 MW Illinois facility in a deal with Microsoft. Vistra also said it plans to develop up to 2,000 MW of gas-fueled electrical capacity in its home state of Texas to enhance grid reliability.  
+8 月，[瑞致达宣布](https://investor.vistracorp.com/2024-08-08-Vistra-Reports-Second-Quarter-2024-Results)与**亚马逊** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 签订了新太阳能设施的购电协议。该公司正在与 Microsoft 达成协议，为亚马逊在德克萨斯州建造一个 200 MW 的发电厂，并在伊利诺伊州建造一个 400 MW 的发电厂。瑞致达还表示，计划在其家乡德克萨斯州开发高达 2,000 MW 的燃气发电容量，以提高电网的可靠性。
 
 
-Investors could have used Thursday's high of 143.41 as an early entry opportunity.
+Results Fuel Vistra Rally结果推动瑞致达反弹
+----------------------------------
 
 
-[SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) added VST stock on Monday as a half position with a 149.53 entry, with the current [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) ranging from 149.08 to 152.06.
+Meanwhile, VST stock rallied in early November on the back of its [Q3 beat](https://www.investors.com/news/sp-500-vistra-earnings-nuclear-industry/). Vistra saw earnings growth accelerate for the second quarter in a row, growing at a 322% clip, according to the company's 10-Q filing. Revenue leapt 54% to nearly $6.3 billion, while FactSet analysts expected just over $5 billion.  
+与此同时，VST 股票在[第三季度表现强劲](https://www.investors.com/news/sp-500-vistra-earnings-nuclear-industry/)的情况下在 11 月初上涨。根据该公司的 10-Q 文件，瑞致达的盈利增长连续第二个季度加速，增长率为 322%。收入增长 54% 至近 63 亿美元，而 FactSet 分析师预计略高于 50 亿美元。
 
 
-Vistra also leads the Utility-Electric Power Group, according to [IBD Stock Checkup](http://research.investors.com/stock-checkup/).
+Executives also noted that Vistra is "in discussions with two particular large companies about building new gas plants to support a data center project."  
+高管们还指出，瑞致达“正在与两家特定的大公司讨论建造新的天然气厂以支持数据中心项目”。
 
 
-Vistra has a near-perfect 97 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) out of a best-possible 99. The Composite Rating combines various technical indicators into one easy-to-read score. The stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) has rebounded to 52-week highs, and it has a perfect 99 [RS Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/). However, the company's string of quarterly losses leading up to its Q3 results have landed it a 48 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).
+In addition, Vistra raised its 2024 ongoing operations adjusted EBITDA target to $5 billion-$5.2 billion from $4.55 billion-$5.05 billion. The company initiated 2025 guidance, expecting adjusted EBITDA of $5.5 billion-$6.1 billion. Analysts put 2025 EBITDA at $5.76 billion.  
+此外，瑞致达将其 2024 年持续运营调整后的 EBITDA 目标从 45.5 亿美元至 50.5 亿美元上调至 50 亿美元至 52 亿美元。该公司启动了 2025 年指引，预计调整后 EBITDA 为 55 亿至 61 亿美元。分析师预计 2025 年的 EBITDA 为 57.6 亿美元。
 
 
-VST stock vaulted more than 291% so far this year, making it the top performer in the S&P 500.
+Along with its 2025 guidance, the Vistra board authorized an additional $1 billion of share repurchases. That brings the current share repurchase authorization to around $2.2 billion. It is expected to be utilized by the end of 2026.  
+除了 2025 年指导外，瑞致达董事会还授权了额外的 10 亿美元股票回购。这使得目前的股票回购授权达到约 22 亿美元。预计将于 2026 年底投入使用。
 
 
-*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)*
+Breaks Out To Fresh High突破至新高
+-----------------------------
 
 
-**YOU MAY ALSO LIKE:**
+
+VST stock surged 4.3% Monday to break out to record highs, peaking at 152.64 in early trade.  
+VST 股价周一飙升 4.3%，创下历史新高，早盘达到 152.64 的峰值。
 
 
-[Nuclear Company Reports Earnings; 'Moving Ahead' With Amazon Despite Regulatory Decision](https://www.investors.com/news/nuclear-talen-energy-earnings-regulators-amazon-deal/)
+Shares cleared a 149.80 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a short [double-bottom base](https://www.investors.com/how-to-invest/investors-corner/how-to-analyze-a-double-bottom-base/) with a high [handle](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/).  
+股价清除了 149.80 [的买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)，形成了一个具有高[手柄](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/)的空头[双底底部](https://www.investors.com/how-to-invest/investors-corner/how-to-analyze-a-double-bottom-base/)。
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+Investors could have used Thursday's high of 143.41 as an early entry opportunity.  
+投资者可能利用周四的高点 143.41 作为提前入场的机会。
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+[SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) added VST stock on Monday as a half position with a 149.53 entry, with the current [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) ranging from 149.08 to 152.06.  
+[SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) 周一以 149.53 的入场价增加了 VST 股票作为半仓，目前的[买入区域](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/)在 149.08 至 152.06 之间。
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+Vistra also leads the Utility-Electric Power Group, according to [IBD Stock Checkup](http://research.investors.com/stock-checkup/).  
+根据 [IBD Stock Checkup](http://research.investors.com/stock-checkup/) 的数据，瑞致达还领导公用事业电力集团。
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+Vistra has a near-perfect 97 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) out of a best-possible 99. The Composite Rating combines various technical indicators into one easy-to-read score. The stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) has rebounded to 52-week highs, and it has a perfect 99 [RS Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/). However, the company's string of quarterly losses leading up to its Q3 results have landed it a 48 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).  
+瑞致达的综合[评分](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)近乎完美 97 分（满分 99 分）。综合评级将各种技术指标组合成一个易于阅读的分数。该股的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/)已反弹至 52 周高点，并拥有完美的 99 [RS 评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)。然而，该公司在第三季度业绩之前的一连串季度亏损使其[每股收益评级](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/)为 48 美元。
+
+
+VST stock vaulted more than 291% so far this year, making it the top performer in the S&P 500.  
+VST 股票今年迄今上涨了 291% 以上，成为标准普尔 500 指数中表现最好的股票。
+
+
+*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)  
+您可以在 X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison) 上关注 Harrison Miller 以获取更多股票新闻和更新*
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[Nuclear Company Reports Earnings; 'Moving Ahead' With Amazon Despite Regulatory Decision  
+核电公司公布收益;尽管监管决定，亚马逊仍“向前迈进”](https://www.investors.com/news/nuclear-talen-energy-earnings-regulators-amazon-deal/)
+
+
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
+最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+
+
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
+寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+
+
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
+加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
 
