--- a/_columns/Swing_Trading/zh-cn/2024-10-25.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-25.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Trade Desk Stock: Selling Early Avoided Flat Action
+  Trade Desk Stock: Selling Early Avoided Flat Action	Trade Desk 股票：提前卖出避免了横盘行动
 date: 2024-10-25 16:13 -0700
 image: /assets/img/swing-trading/2024-10-25.jpg
 author: JUSTIN NIELSEN
@@ -11,27 +11,22 @@ author: JUSTIN NIELSEN
 
 
 
-Big money might be made in the sitting, but for swing trading, locking in gains tends to be the priority. With earnings season kicking in, more stocks are moving in big ways. But overall, the stock market has actually gone essentially sideways the past week. That made our recent sell in Trade Desk stock look even better. We sold with a profit and sat out the flat action.
+Big money might be made in the sitting, but for swing trading, locking in gains tends to be the priority. With earnings season kicking in, more stocks are moving in big ways. But overall, the stock market has actually gone essentially sideways the past week. That made our recent sell in Trade Desk stock look even better. We sold with a profit and sat out the flat action.  
+坐着可能会赚大钱，但对于波段交易，锁定收益往往是首要任务。随着财报季的到来，越来越多的股票正在大幅波动。但总体而言，过去一周股市实际上基本上是横盘整理的。这使得我们最近出售 Trade Desk 股票看起来更好。我们卖出获利，并坐视不理。
 
 
 
 
-How Trade Desk Earned An Add
-----------------------------
+How Trade Desk Earned An AddTrade Desk 如何获得 Add
+-----------------------------------------------
 
 
-**Trade Desk** ([TTD](https://research.investors.com/quote.aspx?symbol=TTD)) hasn't been one of those super winners everyone wants to talk about. But it has mostly held its 21-day line as it trended higher the past couple of months. With a strong stock trending well, mild pullbacks to the 21-day line can be opportunities when the stock bounces.
+**Trade Desk** ([TTD](https://research.investors.com/quote.aspx?symbol=TTD)) hasn't been one of those super winners everyone wants to talk about. But it has mostly held its 21-day line as it trended higher the past couple of months. With a strong stock trending well, mild pullbacks to the 21-day line can be opportunities when the stock bounces.  
+**Trade Desk** （[TTD](https://research.investors.com/quote.aspx?symbol=TTD)） 并不是每个人都想谈论的超级赢家之一。但在过去几个月中呈走高趋势，它大部分时间守住了 21 日线。由于强劲的股票走势良好，当股票反弹时，温和回调至 21 天线可能是机会。
 
 
-That's when we added Trade Desk on an upside reversal as we initiated a half position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(1)**. What also set the stock apart was its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) getting to new highs along with the price. Though we started with just a half position, we quickly added the next day as it followed up on the break of its downtrend **(2)**.
-
-
-
-
----
-
-
-[**This is the event that might be making for fast rotation according to John Kosar CMT**](https://www.investors.com/ibd-videos/videos/watching-and-waiting-how-to-approach-uncertainty-before-election-2024)
+That's when we added Trade Desk on an upside reversal as we initiated a half position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(1)**. What also set the stock apart was its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) getting to new highs along with the price. Though we started with just a half position, we quickly added the next day as it followed up on the break of its downtrend **(2)**.  
+就在那时，我们在 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) （**1）** 上启动了半仓，在上行反转时添加了 Trade Desk。该股的另一个与众不同之处在于其[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/)随着价格而创下新高。虽然我们一开始只有一半的头寸，但第二天我们很快增加了，因为它跟进了其下降趋势的突破 **（2）。**
 
 
 
@@ -39,41 +34,60 @@ That's when we added Trade Desk on an upside reversal as we initiated a half pos
 ---
 
 
-With some stocks, we've tried to hold them a little longer. That was the case with the **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) trade [featured in last week's column](https://www.investors.com/research/swing-trading/sharkninja-stock-a-swing-trade-worth-holding/). But for most stocks, we try to do some selling into strength. For Trade Desk, our first trim was after scoring a 3% gain from our initial entry **(3)**.
+[**This is the event that might be making for fast rotation according to John Kosar CMT  
+根据 John Kosar CMT 的说法，这可能是快速轮换的事件**](https://www.investors.com/ibd-videos/videos/watching-and-waiting-how-to-approach-uncertainty-before-election-2024)
 
 
-A Final Exit
-------------
 
 
-How much profit do we look for? Part of that equation may use the [average true range (ATR) as a guide](https://www.investors.com/research/swing-trading/toast-stock-average-true-range/). For Trade Desk, the ATR was just under 2.5%. Not high octane but also not as slow as L.A. traffic.
+---
 
 
-Once the profit from our entry approached two ATRs or roughly 5%, that seemed like an area to make a decision **(4)**. We trimmed a little more, mostly to make room for faster moving stocks. Trade Desk didn't do anything particularly wrong. In fact for a position trade, the tight action is often an attractive attribute. The stock didn't even come down to its 10-day line as it held tight **(5)**.
+With some stocks, we've tried to hold them a little longer. That was the case with the **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) trade [featured in last week's column](https://www.investors.com/research/swing-trading/sharkninja-stock-a-swing-trade-worth-holding/). But for most stocks, we try to do some selling into strength. For Trade Desk, our first trim was after scoring a 3% gain from our initial entry **(3)**.  
+对于一些股票，我们试图将它们持有更长的时间。[上周专栏中的](https://www.investors.com/research/swing-trading/sharkninja-stock-a-swing-trade-worth-holding/) **SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) 交易就是这种情况。但对于大多数股票，我们尝试进行一些强势抛售。对于 Trade Desk，我们的第一次调整是在从最初的进入 **（3）** 中获得 3% 的收益之后。
 
 
-But for swing trading, that tight action might not be ideal while faster stocks are just starting to make their moves. In the end, we locked in a gain on the remainder of our TTD position while it continued trading tightly **(6)**.
+A Final Exit 最后的出口
+------------------
 
 
-Now that we're a week removed, Trade Desk hasn't really done anything either way. But when considering the time value of money, locking it in was better than letting it sit.
+How much profit do we look for? Part of that equation may use the [average true range (ATR) as a guide](https://www.investors.com/research/swing-trading/toast-stock-average-true-range/). For Trade Desk, the ATR was just under 2.5%. Not high octane but also not as slow as L.A. traffic.  
+我们寻找多少利润？该方程的一部分可能使用[平均真实范围 （ATR） 作为指导](https://www.investors.com/research/swing-trading/toast-stock-average-true-range/)。Trade Desk 的 ATR 略低于 2.5%。辛烷值不高，但也不像洛杉矶的交通那么慢。
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).*
+Once the profit from our entry approached two ATRs or roughly 5%, that seemed like an area to make a decision **(4)**. We trimmed a little more, mostly to make room for faster moving stocks. Trade Desk didn't do anything particularly wrong. In fact for a position trade, the tight action is often an attractive attribute. The stock didn't even come down to its 10-day line as it held tight **(5)**.  
+一旦我们进入的利润接近 2 ATR 或大约 5%，这似乎是一个需要做出决定的领域 **（4）。**我们又削减了一点，主要是为了给快速移动的库存腾出空间。Trade Desk 没有做任何特别错误的事情。事实上，对于头寸交易来说，紧缩动作通常是一个有吸引力的属性。该股甚至没有跌至其 10 日线，因为它保持紧固 **（5）。**
 
 
-**YOU MAY ALSO LIKE:**
+But for swing trading, that tight action might not be ideal while faster stocks are just starting to make their moves. In the end, we locked in a gain on the remainder of our TTD position while it continued trading tightly **(6)**.  
+但对于波段交易来说，这种紧张的走势可能并不理想，因为更快的股票才刚刚开始行动。最后，我们锁定了 TTD 头寸的剩余部分的收益，而它继续紧缩交易 **（6）。**
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+Now that we're a week removed, Trade Desk hasn't really done anything either way. But when considering the time value of money, locking it in was better than letting it sit.  
+现在我们已经离开了一周，Trade Desk 并没有真正做任何事情。但是，当考虑到货币的时间价值时，将其锁定总比让它坐着要好。
 
 
-[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+
+
+[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
+Mark Minervini 对动荡的市场提出了这个违反直觉的建议](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
+
+
+[How Weak Breadth Can Give You An Early Warning For Market Tops  
+弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+
+
+[Follow Premarket And After-The-Open Action With IBD Experts  
+跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
 
 
 
