--- a/_columns/The_Big_Picture/2024-11-19.md
+++ b/_columns/The_Big_Picture/2024-11-19.md
@@ -101,7 +101,7 @@ The iShares U.S. Home Construction ETF ([ITB](https://research.investors.com/quo
 [IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Nvidia Retakes Buy Point, Leads Market Bounce Before Earnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bullis-rebound-nvidia-earnings-buy-point/)
+[Futures: Nvidia Due With AI Giant Back In Buy Zone](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-target/)
 
 
 
