--- a/_columns/The_Big_Picture/zh-cn/2024-11-15.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-15.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Falls On Fed Comments As Trump Rally Sputters; Nvidia Earnings Loom
+  Stock Market Falls On Fed Comments As Trump Rally Sputters; Nvidia Earnings Loom	股市因美联储的评论而下跌，因为特朗普的反弹停滞不前;Nvidia 收益迫在眉睫
 date: 2024-11-15 17:39 -0800
 author: MICHAEL LARKIN
 ---
@@ -10,90 +10,114 @@ author: MICHAEL LARKIN
 
 
 
-Stocks ended the week sharply lower Friday after comments from Fed Chair Jerome Powell continued to weigh on the markets. Going forward, the latest earnings report from artificial intelligence titan **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) could move stocks in the coming week.
+Stocks ended the week sharply lower Friday after comments from Fed Chair Jerome Powell continued to weigh on the markets. Going forward, the latest earnings report from artificial intelligence titan **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) could move stocks in the coming week.  
+在美联储主席杰罗姆鲍威尔的言论继续打压市场后，股市周五收盘大幅走低。展望未来，人工智能巨头英**伟达** （[NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)） 的最新收益报告可能会在未来一周影响股市。
 
 
-The Nasdaq composite ended Friday down 2.2%. This meant the tech-heavy index suffered a weekly decline of 3.2%. It has fallen in two of the past three weeks and undercut its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). The Nasdaq remains above its [50-day line](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and is up more than 24% for the year.
-
-
-
-
-The S&P 500 also backed off, falling 1.3% for the day. It notched a weekly decline of 2.1% and has now fallen in three of the past four weeks. The benchmark index sits a sliver below its 21-day line and holds a gain of 23.1% for 2024.
-
-
-Decliners led advancers around 2-to-1 on the New York Stock Exchange and nearly 3-to-1 on the Nasdaq. The S&P 500 added a fresh distribution day while the Nasdaq avoided one due to lower volume.
-
-
-As the S&P 500 ended virtually on its 21-day line, [Investor's Business Daily is continuing to recommend exposure](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) at the 80% to 100% level, but shifting to the lower end of this range makes sense due to the bearish action.
-
-
-The Dow Jones Industrial Average fared best out of the major indexes with a 0.7% drop Friday. **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) was the best performer as its post-earnings bounce continued while **Amazon.com** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) lagged.
-
-
-Small caps also had a tough session on the stock market, with the Russell 2000 falling 1.4% Friday. While off highs it remains up nearly 5% for the month. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell 1.6% for the day and skidded 5.8% for the week.
-
-
-Powell Comments Hit Stocks, Nvidia Earnings Due
------------------------------------------------
-
-
-![](https://www.investors.com/wp-content/uploads/2024/11/MP111524.jpg)Comments made by Fed Chair Powell Thursday that there is no need to rush on lowering rates once again weighed on the market. He said the strong economy means central bankers have the luxury of taking decisions "carefully."
-
-
-Boston Fed President Susan Collins echoed this opinion when she said a December rate cut is "not a done deal." [The CME Fedwatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) now rates the likelihood of a cut in December as less than 60%.
-
-
-Meanwhile, the Commerce Department reported that retail sales rose 0.4% in October compared with the previous month, above expectations for a 0.3% increase. This was despite September's sales figure being revised upward to an 0.8% increase from previously reported growth of 0.4%.
-
-
-There will be a sprinkling of economic data in the coming week. It includes housing starts and building permits readings on Tuesday as well as existing-home sales data and the Philadelphia Fed manufacturing survey on Thursday. On Friday comes the S&P services and manufacturing PMI reports, as well as the University of Michigan's Consumer Survey.
-
-
-But the key event in the coming week is [on the earnings front](https://www.investors.com/category/research/earnings-preview/), with **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) set to post results on Wednesday. The firm's results and outlook should have a big impact on AI-related stocks. Other noteworthy reports come from Dow Jones highflier **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) and [Leaderboard stock](https://get.investors.com/leaderboard/) **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)).
-
-
-Applied Materials Hits This Stock Market Group
-----------------------------------------------
-
-
-The [S&P 500 sectors ended Friday mostly lower](https://www.investors.com/category/etfs-and-funds/sectors/). Utilities and financials fared the best, while health care and technology lagged the most.
+The Nasdaq composite ended Friday down 2.2%. This meant the tech-heavy index suffered a weekly decline of 3.2%. It has fallen in two of the past three weeks and undercut its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). The Nasdaq remains above its [50-day line](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and is up more than 24% for the year.  
+纳斯达克综合指数周五收盘下跌 2.2%。这意味着以科技股为主的指数每周下跌 3.2%。它在过去三周中有两周下跌，并低于其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。纳斯达克指数仍高于其 [50 日线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)，今年上涨了 24% 以上。
 
 
 
-As ever, investors could get a deeper insight into the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the performance of Investor's Business Daily's 197 industry groups.
+
+The S&P 500 also backed off, falling 1.3% for the day. It notched a weekly decline of 2.1% and has now fallen in three of the past four weeks. The benchmark index sits a sliver below its 21-day line and holds a gain of 23.1% for 2024.  
+标准普尔 500 指数也回落，当天下跌 1.3%。它每周下跌 2.1%，现在在过去 4 周中有 3 周下跌。该基准指数略低于其 21 日线，2024 年上涨 23.1%。
 
 
-Dairy products plays, tobacco stocks, automakers, mail order retailers and water utilities fared the best.
+Decliners led advancers around 2-to-1 on the New York Stock Exchange and nearly 3-to-1 on the Nasdaq. The S&P 500 added a fresh distribution day while the Nasdaq avoided one due to lower volume.  
+纽约证券交易所的下跌股以 2 比 1 的比分领先，在纳斯达克指数以近 3 比 1 的比分领先。标准普尔 500 指数增加了一个新的发行日，而纳斯达克指数由于成交量较低而避免了一个。
 
 
-Medical software stocks, biotech plays, medical research services firms and fiber-optics stocks were among the laggards.
+As the S&P 500 ended virtually on its 21-day line, [Investor's Business Daily is continuing to recommend exposure](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) at the 80% to 100% level, but shifting to the lower end of this range makes sense due to the bearish action.  
+由于标准普尔 500 指数几乎在其 21 日线收盘，[《投资者商业日报》继续建议在](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 80% 至 100% 的水平进行敞口，但由于看跌行动，转向该区间的低端是有道理的。
 
 
-Additionally, the chip equipment group struggled, weighed down by post-earnings underperformance from **Applied Materials** ([AMAT](https://research.investors.com/quote.aspx?symbol=AMAT)). Applied Materials stock plunged 9.2% after its revenue outlook came in below expectations.
+The Dow Jones Industrial Average fared best out of the major indexes with a 0.7% drop Friday. **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) was the best performer as its post-earnings bounce continued while **Amazon.com** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) lagged.  
+道琼斯工业平均指数周五下跌 0.7%，在主要指数中表现最好。**华特迪士尼** （[DIS](https://research.investors.com/quote.aspx?symbol=DIS)） 表现最佳，其财报后反弹继续，而 **Amazon.com** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 则落后。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111524.pdf).
+Small caps also had a tough session on the stock market, with the Russell 2000 falling 1.4% Friday. While off highs it remains up nearly 5% for the month. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell 1.6% for the day and skidded 5.8% for the week.  
+小盘股在股市上也经历了艰难的交易，罗素 2000 指数周五下跌 1.4%。虽然从高点回落，但它本月仍上涨了近 5%。Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 当天下跌 1.6%，本周下跌 5.8%。
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+Powell Comments Hit Stocks, Nvidia Earnings Due鲍威尔的评论打击了股市，英伟达财报到期
+------------------------------------------------------------------
 
 
-**YOU MAY ALSO LIKE:**
+![](https://www.investors.com/wp-content/uploads/2024/11/MP111524.jpg)Comments made by Fed Chair Powell Thursday that there is no need to rush on lowering rates once again weighed on the market. He said the strong economy means central bankers have the luxury of taking decisions "carefully."  
+美联储主席鲍威尔周四表示无需急于降息，再次令市场承压。他说，强劲的经济意味着央行行长们可以“谨慎”地做出决定。
 
 
-[HubSpot Stock Flirts With Buy Point, Finally](https://www.investors.com/stock-lists/sector-leaders/hubspot-stock-earnings-report-buy-point/)
+Boston Fed President Susan Collins echoed this opinion when she said a December rate cut is "not a done deal." [The CME Fedwatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) now rates the likelihood of a cut in December as less than 60%.  
+波士顿联储主席苏珊·柯林斯 （Susan Collins） 回应了这一观点，她表示 12 月降息“尚未达成协议”。[CME Fedwatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) 现在将 12 月降息的可能性评为低于 60%。
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+Meanwhile, the Commerce Department reported that retail sales rose 0.4% in October compared with the previous month, above expectations for a 0.3% increase. This was despite September's sales figure being revised upward to an 0.8% increase from previously reported growth of 0.4%.  
+与此同时，美国商务部报告称，10 月份零售额与上月相比增长 0.4%，高于预期的 0.3%。尽管 9 月份的销售数据从之前报告的 0.4% 增长上调至 0.8%。
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+There will be a sprinkling of economic data in the coming week. It includes housing starts and building permits readings on Tuesday as well as existing-home sales data and the Philadelphia Fed manufacturing survey on Thursday. On Friday comes the S&P services and manufacturing PMI reports, as well as the University of Michigan's Consumer Survey.  
+未来一周将有大量经济数据。它包括周二的房屋开工和建筑许可读数，以及成屋销售数据和周四的费城联储制造业调查。周五将发布标准普尔服务和制造业采购经理人指数报告，以及密歇根大学的消费者调查。
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+But the key event in the coming week is [on the earnings front](https://www.investors.com/category/research/earnings-preview/), with **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) set to post results on Wednesday. The firm's results and outlook should have a big impact on AI-related stocks. Other noteworthy reports come from Dow Jones highflier **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) and [Leaderboard stock](https://get.investors.com/leaderboard/) **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)).  
+但未来一周的关键事件[是财报方面](https://www.investors.com/category/research/earnings-preview/)，**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 将于周三公布业绩。该公司的业绩和前景应该会对 AI 相关股票产生重大影响。其他值得注意的报告来自道琼斯高端公司**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 和[排行榜股票](https://get.investors.com/leaderboard/)**Viking** （[VIK](https://research.investors.com/quote.aspx?symbol=VIK)）。
 
 
-[Nvidia Earnings Key As Trump Rally Wanes; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-critical-trump-trade-falters/)
+Applied Materials Hits This Stock Market Group应用材料公司 （Applied Materials） 冲击该股票市场集团
+----------------------------------------------------------------------------------
+
+
+The [S&P 500 sectors ended Friday mostly lower](https://www.investors.com/category/etfs-and-funds/sectors/). Utilities and financials fared the best, while health care and technology lagged the most.  
+[标准普尔 500 指数板块周五收盘大多走低](https://www.investors.com/category/etfs-and-funds/sectors/)。公用事业和金融板块表现最好，而医疗保健和科技板块表现最落后。
+
+
+
+As ever, investors could get a deeper insight into the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the performance of Investor's Business Daily's 197 industry groups.  
+与往常一样，投资者可以通过研究 Investor's Business Daily 的 197 个行业团体的表现，更深入地了解[当今股市的行动](https://www.investors.com/news/stock-market-today-stock-market-news/)。
+
+
+Dairy products plays, tobacco stocks, automakers, mail order retailers and water utilities fared the best.  
+乳制品、烟草股、汽车制造商、邮购零售商和水务公司表现最好。
+
+
+Medical software stocks, biotech plays, medical research services firms and fiber-optics stocks were among the laggards.  
+医疗软件股、生物技术公司、医疗研究服务公司和光纤股落后。
+
+
+Additionally, the chip equipment group struggled, weighed down by post-earnings underperformance from **Applied Materials** ([AMAT](https://research.investors.com/quote.aspx?symbol=AMAT)). Applied Materials stock plunged 9.2% after its revenue outlook came in below expectations.  
+此外，芯片设备组因**应用材料**公司 （[AMAT）](https://research.investors.com/quote.aspx?symbol=AMAT) 财报后表现不佳而陷入困境。应用材料公司（Applied Materials）的营收前景低于预期，股价暴跌9.2%。
+
+
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111524.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111524.pdf)。
+
+
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[HubSpot Stock Flirts With Buy Point, Finally  
+HubSpot 股票终于与 Buy Point 调情](https://www.investors.com/stock-lists/sector-leaders/hubspot-stock-earnings-report-buy-point/)
+
+
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+
+
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+
+
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+
+
+[Nvidia Earnings Key As Trump Rally Wanes; What To Do Now  
+随着特朗普反弹减弱，英伟达财报成为关键;现在该做什么](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-critical-trump-trade-falters/)
 
 
 
