--- a/_columns/The_Big_Picture/zh-cn/2024-11-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-19.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stocks Extend Bounce As Investors Hold Tight Ahead Of Nvidia Earnings; This Index Trounces Market
+  Stocks Extend Bounce As Investors Hold Tight Ahead Of Nvidia Earnings; This Index Trounces Market	由于投资者在 Nvidia 财报发布前紧紧持有，股市延续反弹;该指数冲击市场
 date: 2024-11-19 17:18 -0800
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,98 +10,125 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market's rebound continued as most major indexes climbed Tuesday. And while the Dow Jones Industrial Average lagged, the IBD 50 blew by the rest of the market.
+The stock market's rebound continued as most major indexes climbed Tuesday. And while the Dow Jones Industrial Average lagged, the IBD 50 blew by the rest of the market.  
+随着大多数主要指数周二攀升，股市继续反弹。虽然道琼斯工业平均指数落后，但 IBD 50 指数跑赢了市场其他部分。
 
 
-Stocks opened weaker, as Wall Street appeared to be shaken by an [escalation in the Russia-Ukraine conflict](https://www.investors.com/news/putin-russia-nuclear-doctrine-defense-stocks-u-s-ukraine-long-range-missiles/) that saw deeper U.S. participation. Investors pivoted to Treasury bonds and gold. But almost immediately after the opening bell, stock market indexes started paring losses. By the first hour of trading, the Nasdaq was in the black.
+Stocks opened weaker, as Wall Street appeared to be shaken by an [escalation in the Russia-Ukraine conflict](https://www.investors.com/news/putin-russia-nuclear-doctrine-defense-stocks-u-s-ukraine-long-range-missiles/) that saw deeper U.S. participation. Investors pivoted to Treasury bonds and gold. But almost immediately after the opening bell, stock market indexes started paring losses. By the first hour of trading, the Nasdaq was in the black.  
+股市开盘走弱，因为华尔街似乎受到[俄乌冲突升级](https://www.investors.com/news/putin-russia-nuclear-doctrine-defense-stocks-u-s-ukraine-long-range-missiles/)的震动，美国参与程度更高。投资者转向美国国债和黄金。但几乎在开盘钟声响起后，股市指数就开始收复失地。到交易的第一个小时，纳斯达克指数处于亏损状态。
 
 
 
 
-At the close, the Nasdaq led the main indexes with a gain of 1% and the S&P 500 added 0.4%. Both indexes again held at their 21-day exponential moving averages.
+At the close, the Nasdaq led the main indexes with a gain of 1% and the S&P 500 added 0.4%. Both indexes again held at their 21-day exponential moving averages.  
+收盘时，纳斯达克指数以 1% 的涨幅领跑主要指数，标准普尔 500 指数上涨 0.4%。这两个指数再次保持在 21 天指数移动平均线。
 
 
-But the Dow fell 0.3%, despite that **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) climbed to a record high after the retailer [beat October-quarter estimates](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.). The Dow, however, trimmed losses and closed above its 21-day exponential moving average.
+But the Dow fell 0.3%, despite that **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) climbed to a record high after the retailer [beat October-quarter estimates](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.). The Dow, however, trimmed losses and closed above its 21-day exponential moving average.  
+但道琼斯指数下跌 0.3%，尽管**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 在[零售商 10 月季度超出预期](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.)后攀升至历史新高。然而，道琼斯指数收复失地并收于其 21 天指数移动平均线上方。
 
 
-Volume rose on the New York Stock Exchange and fell on the Nasdaq from Monday's totals.
+Volume rose on the New York Stock Exchange and fell on the Nasdaq from Monday's totals.  
+纽约证券交易所的成交量较周一的总成交量上升，纳斯达克的成交量下跌。
 
 
-The 10-year Treasury yield fell nearly four basis points to 4.378% but that was well off morning lows. The benchmark yield is at a Nov. 8 low, which growth investors and rate-sensitive stocks would welcome. Real estate, utilities and technology sectors climbed 0.4% to 0.8% Tuesday. Consumer discretionary, consumer staples and communications services were other S&P 500 indexes that rose, and the other five fell.
+The 10-year Treasury yield fell nearly four basis points to 4.378% but that was well off morning lows. The benchmark yield is at a Nov. 8 low, which growth investors and rate-sensitive stocks would welcome. Real estate, utilities and technology sectors climbed 0.4% to 0.8% Tuesday. Consumer discretionary, consumer staples and communications services were other S&P 500 indexes that rose, and the other five fell.  
+10 年期美国国债收益率下跌近 4 个基点至 4.378%，但远低于早盘低点。基准收益率处于 11 月 8 日的低点，成长型投资者和对利率敏感的股票会欢迎。房地产、公用事业和科技板块周二上涨 0.4% 至 0.8%。非必需消费品、必需消费品和通信服务是标准普尔 500 指数上涨的其他指数，其他五个指数下跌。
 
 
-![market pulse](https://www.investors.com/wp-content/uploads/2024/11/MP111924.jpg)Gold for November delivery rose 0.6% to $2,627.10 per ounce. West Texas Intermediate crude oil edged up 0.3% to $69.39 per barrel.
+![market pulse](https://www.investors.com/wp-content/uploads/2024/11/MP111924.jpg)Gold for November delivery rose 0.6% to $2,627.10 per ounce. West Texas Intermediate crude oil edged up 0.3% to $69.39 per barrel.  
+11 月交割的黄金价格上涨 0.6% 至每盎司 2,627.10 美元。西德克萨斯中质原油小幅上涨 0.3% 至每桶 69.39 美元。
 
 
-The IBD 50 surged 3%, easily outperforming the broad market. The growth-stock index found support at its 21-day line and is back above the Oct. 21 high at 423.25. Its tracking exchange traded fund, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), rose 4% to regain a 29.15 buy point.
+The IBD 50 surged 3%, easily outperforming the broad market. The growth-stock index found support at its 21-day line and is back above the Oct. 21 high at 423.25. Its tracking exchange traded fund, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), rose 4% to regain a 29.15 buy point.  
+IBD 50 飙升 3%，轻松跑赢大盘。成长股指数在其 21 日线获得支撑，并重回 10 月 21 日高点 423.25 上方。其跟踪交易所交易基金 Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 上涨 4%，重新获得 29.15 的买入点。
 
 
-**Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) gave the IBD 50 its biggest boost. The homeowners' insurance provider jumped 17%. **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT)) surged more than 14% after the data center infrastructure company gave [a bullish investor presentation](https://www.investors.com/news/technology/vertiv-stock-vrt-rises-after-investor-event/). The volatile **Hims & Hers Health** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) vaulted 12% after a former Food and Drug Administration official joined the company's board.
+**Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) gave the IBD 50 its biggest boost. The homeowners' insurance provider jumped 17%. **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT)) surged more than 14% after the data center infrastructure company gave [a bullish investor presentation](https://www.investors.com/news/technology/vertiv-stock-vrt-rises-after-investor-event/). The volatile **Hims & Hers Health** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) vaulted 12% after a former Food and Drug Administration official joined the company's board.  
+**柠檬水** （[LMND](https://research.investors.com/quote.aspx?symbol=LMND)） 为 IBD 50 提供了最大的推动力。这家房主保险公司上涨了 17%。**Vertiv** （[VRT](https://research.investors.com/quote.aspx?symbol=VRT)） 在这家数据中心基础设施公司发表了[看涨的投资者介绍](https://www.investors.com/news/technology/vertiv-stock-vrt-rises-after-investor-event/)后飙升超过 14%。在一位前食品和药物管理局官员加入公司董事会后，波动较大的**Hims & Hers Health** （[HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)）暴涨了12%。
 
 
-Small Caps, Midcap Hold Significant Level
------------------------------------------
+Small Caps, Midcap Hold Significant Level小盘股、中盘股持有显著水平
+------------------------------------------------------
 
 
-Smaller stocks stood their ground. The Russell 2000 reversed higher after testing the mid-October highs around 2,290. The index reversed higher 0.8%. The S&P MidCap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) made a similar bullish reversal around the 3,200 level, and closed 0.1% higher.
+Smaller stocks stood their ground. The Russell 2000 reversed higher after testing the mid-October highs around 2,290. The index reversed higher 0.8%. The S&P MidCap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) made a similar bullish reversal around the 3,200 level, and closed 0.1% higher.  
+较小的股票坚守阵地。罗素 2000 指数在测试 10 月中旬的高点 2,290 附近后反转走高。该指数逆转走高 0.8%。标准普尔中型股 400 指数 （[MDY](https://research.investors.com/quote.aspx?symbol=MDY)） 在 3,200 水平附近也出现了类似的看涨逆转，收盘上涨 0.1%。
 
 
-It will be important for both indexes to follow through on those reversals by adding gains this week.
+It will be important for both indexes to follow through on those reversals by adding gains this week.  
+这两个指数都必须通过本周增加涨幅来跟进这些逆转。
 
 
-A few leading stocks that had erased gains from November breakouts, such as **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), rebounded back above their buy points, too.
+A few leading stocks that had erased gains from November breakouts, such as **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), rebounded back above their buy points, too.  
+一些抹去了 11 月突破的涨幅的领先股票，如 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 **Heico** （[HEI](https://research.investors.com/quote.aspx?symbol=HEI)），也反弹回了其买入点上方。
 
 
-The S&P 500 shed its Oct. 15 distribution day, now that 25 sessions have passed since that date. That leaves the S&P with two [distribution days](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and the Nasdaq with just one. That's a positive sign.
+The S&P 500 shed its Oct. 15 distribution day, now that 25 sessions have passed since that date. That leaves the S&P with two [distribution days](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and the Nasdaq with just one. That's a positive sign.  
+标准普尔 500 指数放弃了 10 月 15 日的发行日，现在自该日期以来已经过去了 25 个交易日。这使得标准普尔指数有两个[分发日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，而纳斯达克只有一个。这是一个积极的信号。
 
 
-Advancing stocks topped decliners by 9-7 on the Nasdaq, but losers edged out winners on the NYSE, according to FactSet.
+Advancing stocks topped decliners by 9-7 on the Nasdaq, but losers edged out winners on the NYSE, according to FactSet.  
+根据 FactSet 的数据，纳斯达克上涨的股票以 9-7 的比分领先于下跌的股票，但在纽约证券交易所，下跌的股票略微超过了赢家。
 
 
-Market breadth measures have been mixed.
+Market breadth measures have been mixed.  
+市场广度指标喜忧参半。
 
 
-The number of [52-week highs](https://www.investors.com/data-tables/new-high-list-nov-18-2024/) and the number of stocks up in volume vs. down in volume are at bullish levels. But the NYSE and Nasdaq advance-declines lines are below their 10-day moving averages, and the Nasdaq's line remains in a gentle downtrend.
+The number of [52-week highs](https://www.investors.com/data-tables/new-high-list-nov-18-2024/) and the number of stocks up in volume vs. down in volume are at bullish levels. But the NYSE and Nasdaq advance-declines lines are below their 10-day moving averages, and the Nasdaq's line remains in a gentle downtrend.  
+[52 周高点](https://www.investors.com/data-tables/new-high-list-nov-18-2024/)的数量以及成交量上涨与成交量下跌的股票数量均处于看涨水平。但纽约证券交易所和纳斯达克的涨跌线低于其 10 天移动平均线，纳斯达克的线仍处于温和的下降趋势中。
 
 
-Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) found support at its 50-day line. It climbed 0.3%. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) fell 0.3%.
+Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) found support at its 50-day line. It climbed 0.3%. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) fell 0.3%.  
+Direxion 纳斯达克 100 等权重 ETF （[QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)） 在其 50 天线找到支撑。它上涨了 0.3%。Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 下跌 0.3%。
 
 
-Stock Market Faces Nvidia Earnings
-----------------------------------
+Stock Market Faces Nvidia Earnings股市面临英伟达财报
+-------------------------------------------
 
 
-The stock market showed fortitude as it prepared for a major earnings report after Wednesday's close from **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).
+The stock market showed fortitude as it prepared for a major earnings report after Wednesday's close from **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).  
+股市在周三收盘后为 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 的重要收益报告做准备时表现出坚韧不拔。
 
 
-Along with the report comes the stock market's hopes for a continued artificial intelligence boom. Nvidia is arguably the most important AI enterprise, so the financial results and executive comments act as an important lever for the AI trade. And, oh by the way, Nvidia is also the biggest stock by market cap, now exceeding $3.601 trillion. Shares rose 4.5% Tuesday.
+Along with the report comes the stock market's hopes for a continued artificial intelligence boom. Nvidia is arguably the most important AI enterprise, so the financial results and executive comments act as an important lever for the AI trade. And, oh by the way, Nvidia is also the biggest stock by market cap, now exceeding $3.601 trillion. Shares rose 4.5% Tuesday.  
+随着该报告的发布，股市对人工智能持续繁荣的希望也随之而来。Nvidia 可以说是最重要的 AI 企业，因此财务业绩和高管评论是 AI 交易的重要杠杆。而且，顺便说一句，英伟达也是市值最大的股票，现在超过 3.601 万亿美元。股价周二上涨 4.5%。
 
 
-In economic news, U.S. housing starts fell 3.1% in October to 1.3 million at an annualized rate, a larger drop than expected. Construction activity in the South dropped 8.8% — likely impacted by hurricanes, Priscilla Thiagamoorthy, senior economist at BMO Capital Markets, said in an analysis. Building permits, a proxy for future home construction, edged down 0.6% to a 1.42 million annual rate.
+In economic news, U.S. housing starts fell 3.1% in October to 1.3 million at an annualized rate, a larger drop than expected. Construction activity in the South dropped 8.8% — likely impacted by hurricanes, Priscilla Thiagamoorthy, senior economist at BMO Capital Markets, said in an analysis. Building permits, a proxy for future home construction, edged down 0.6% to a 1.42 million annual rate.  
+经济新闻方面，美国 10 月份新屋开工年率下降 3.1% 至 130 万套，降幅大于预期。BMO Capital Markets 高级经济学家 Priscilla Thiagamoorthy 在一份分析中表示，南部的建筑活动下降了 8.8%，可能受到飓风的影响。代表未来房屋建设的建筑许可证小幅下降 0.6% 至 142 万。
 
 
-"We're expecting residential construction to contract again in Q4," Thiagamoorthy added. "The supply problem will keep the housing market in a soft patch for some time."
+"We're expecting residential construction to contract again in Q4," Thiagamoorthy added. "The supply problem will keep the housing market in a soft patch for some time."  
+“我们预计住宅建设将在第四季度再次收缩，”Thiagamoorthy 补充道。“供应问题将使房地产市场在一段时间内处于疲软状态。”
 
 
-The iShares U.S. Home Construction ETF ([ITB](https://research.investors.com/quote.aspx?symbol=ITB)) eased 0.2%.
+The iShares U.S. Home Construction ETF ([ITB](https://research.investors.com/quote.aspx?symbol=ITB)) eased 0.2%.  
+iShares 美国房屋建筑 ETF （[ITB](https://research.investors.com/quote.aspx?symbol=ITB)） 下跌 0.2%。
 
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111924.pdf)
+[View General Market Indicators chart page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111924.pdf)
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology  
+IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest  
+股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Nvidia Retakes Buy Point, Leads Market Bounce Before Earnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bullis-rebound-nvidia-earnings-buy-point/)
+[Futures: Nvidia Due With AI Giant Back In Buy Zone  
+期货：Nvidia 将与 AI 巨头重返买入区](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-target/)
 
 
 
