--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-19.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-19.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Financial AI Stock Tradeweb Hits Buy Point As Earnings Growth Accelerates
+  Financial AI Stock Tradeweb Hits Buy Point As Earnings Growth Accelerates	随着盈利增长加速，Financial AI Stock Tradeweb 触及买入点
 image: /assets/img/stock-of-the-day/2024-11-19.jpg
 date: 2024-11-19 12:01 -0800
 author: SCOTT LEHTONEN
@@ -12,57 +12,34 @@ author: SCOTT LEHTONEN
 
 
 
-[Tuesday's IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) is fintech leader **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)), which is rebounding from a key support level. The financial AI stock hit an early buy trigger Tuesday.
+[Tuesday's IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) is fintech leader **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)), which is rebounding from a key support level. The financial AI stock hit an early buy trigger Tuesday.  
+[周二的 IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)是金融科技领导者 **Tradeweb Markets** （[TW），](https://research.investors.com/quote.aspx?symbol=TW)它正在从关键支撑位反弹。金融 AI 股票周二触及早盘买入触发。
 
 
-[Tradeweb](https://www.tradeweb.com/newsroom/media-center/insights/commentary/2023-annual-client-letter/), a builder and operator of electronic marketplaces, has seen a number of hedge funds increasingly incorporate Tradeweb's Automated Intelligent Execution (AiEX) tool into their trading systems.
-
-
-
-
-Originally conceived as an efficiency tool to free up traders' time by automating low-touch tickets, [AiEX has evolved in new areas](https://www.investors.com/research/breakout-stocks-technical-analysis/fintech-firm-tradeweb-expands-ai-for-traders-alonside-nvidia-stock-lifting-tw-stock-toward-a-breakout/). It is now deployed by some of the world's most sophisticated traders. Tradeweb says the technology is creating entirely new avenues of trading across various asset classes and trading environments.
-
-
-Clients leverage Tradeweb's click-to-trade protocol within AiEX. That allows them to determine when, at what level and with whom to execute their trade. AiEX enables that while creating a minimal market footprint.
-
-
-The New York-based firm operates across three core areas: institutional (Tradeweb), wholesale (Dealerweb) and retail (Tradeweb Direct).
-
-
-In the latest quarter, reported on Oct. 30, Tradeweb earned 75 cents per share on revenue of $448.9 million. Earnings climbed 36% vs. the year-ago period, while sales grew 37%. Bullishly, the company boasts two quarters of accelerating earnings and sales growth. [Accelerating earnings and sales growth](https://www.investors.com/how-to-invest/investors-corner/accelerating-earnings-growth-often-precedes-a-break-out/) is a hallmark of big stock market winners.
-
-
-For the full year, Wall Street forecasts the company's earnings will rise 28% before climbing another 14% in 2025, per [IBD MarketSurge](https://marketsurge.investors.com/).
+[Tradeweb](https://www.tradeweb.com/newsroom/media-center/insights/commentary/2023-annual-client-letter/), a builder and operator of electronic marketplaces, has seen a number of hedge funds increasingly incorporate Tradeweb's Automated Intelligent Execution (AiEX) tool into their trading systems.  
+[Tradeweb](https://www.tradeweb.com/newsroom/media-center/insights/commentary/2023-annual-client-letter/) 是电子市场的构建者和运营商，已经看到许多对冲基金越来越多地将 Tradeweb 的自动智能执行 （AiEX） 工具整合到他们的交易系统中。
 
 
 
 
----
+Originally conceived as an efficiency tool to free up traders' time by automating low-touch tickets, [AiEX has evolved in new areas](https://www.investors.com/research/breakout-stocks-technical-analysis/fintech-firm-tradeweb-expands-ai-for-traders-alonside-nvidia-stock-lifting-tw-stock-toward-a-breakout/). It is now deployed by some of the world's most sophisticated traders. Tradeweb says the technology is creating entirely new avenues of trading across various asset classes and trading environments.  
+AiEX 最初被设想为一种效率工具，通过自动化低接触票证来释放交易者的时间，[AiEX 已经在新领域发展](https://www.investors.com/research/breakout-stocks-technical-analysis/fintech-firm-tradeweb-expands-ai-for-traders-alonside-nvidia-stock-lifting-tw-stock-toward-a-breakout/)。现在，世界上一些最老练的交易员都部署了它。Tradeweb 表示，该技术正在为各种资产类别和交易环境创造全新的交易途径。
 
 
-[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+Clients leverage Tradeweb's click-to-trade protocol within AiEX. That allows them to determine when, at what level and with whom to execute their trade. AiEX enables that while creating a minimal market footprint.  
+客户在 AiEX 中利用 Tradeweb 的点击交易协议。这使他们能够确定何时、在哪个级别以及与谁一起执行他们的交易。AiEX 实现了这一点，同时创造了最小的市场足迹。
 
 
+The New York-based firm operates across three core areas: institutional (Tradeweb), wholesale (Dealerweb) and retail (Tradeweb Direct).  
+这家总部位于纽约的公司在三个核心领域开展业务：机构 （Tradeweb）、批发 （Dealerweb） 和零售 （Tradeweb Direct）。
 
 
----
+In the latest quarter, reported on Oct. 30, Tradeweb earned 75 cents per share on revenue of $448.9 million. Earnings climbed 36% vs. the year-ago period, while sales grew 37%. Bullishly, the company boasts two quarters of accelerating earnings and sales growth. [Accelerating earnings and sales growth](https://www.investors.com/how-to-invest/investors-corner/accelerating-earnings-growth-often-precedes-a-break-out/) is a hallmark of big stock market winners.  
+在 10 月 30 日报告的最新季度中，Tradeweb 每股收益为 75 美分，营收为 4.489 亿美元。收益同比增长 36%，销售额增长 37%。乐观地说，该公司拥有两个季度的加速收益和销售额增长。[加速收益和销售额增长](https://www.investors.com/how-to-invest/investors-corner/accelerating-earnings-growth-often-precedes-a-break-out/)是股市大赢家的标志。
 
 
-
-AI Stock Hits Early Buy Trigger
--------------------------------
-
-
-After hitting a record high on Oct. 15, Tradeweb stock pulled back to its 10-week line, where it is currently finding support. On the weekly chart, shares formed a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/) with a 136.13 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/), according to [IBD MarketSurge chart analysis.](https://marketsurge.investors.com/)
-
-
-Aggressive investors could use a move above today's high of 131.70 as a [trendline early entry](https://www.investors.com/how-to-invest/investors-corner/trendline-entries-in-stock-charts-could-double-your-profits/). Shares rallied more than 2% Tuesday midday, placing the stock above the early buy trigger.
-
-
-Bullishly, the stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) is bouncing back sharply in recent sessions, a sign that the stock is again beating the performance of the S&P 500.
-
-
-Amid strong price action over the last two years, [Tradeweb stock](https://research.investors.com/stock-checkup/nasdaq-tradeweb-markets-tw.aspx) boasts a perfect 99 [IBD Composite Rating,](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/). Tradeweb also joined [IBD Leaderboard's Leaders list](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) during Tuesday's bullish action. That makes the AI stock one of the best ideas to watch right now.
+For the full year, Wall Street forecasts the company's earnings will rise 28% before climbing another 14% in 2025, per [IBD MarketSurge](https://marketsurge.investors.com/).  
+根据 [IBD MarketSurge](https://marketsurge.investors.com/) 的数据，华尔街预测该公司全年的收益将增长 28%，然后在 2025 年再攀升 14%。
 
 
 
@@ -70,7 +47,8 @@ Amid strong price action over the last two years, [Tradeweb stock](https://resea
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems  
+这个行业集团 — 以及 4 家 IPO — 打磨了 20 颗“完美”的宝石**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -78,25 +56,66 @@ Amid strong price action over the last two years, [Tradeweb stock](https://resea
 ---
 
 
-*Follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://www.twitter.com/IBD_SLehtonen) for more on the best stocks to buy and watch and the Dow Jones Industrial Average.*
+
+AI Stock Hits Early Buy TriggerAI Stock 触及早期买入触发器
+-------------------------------------------------
 
 
-**YOU MAY ALSO LIKE:**
+After hitting a record high on Oct. 15, Tradeweb stock pulled back to its 10-week line, where it is currently finding support. On the weekly chart, shares formed a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/) with a 136.13 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/), according to [IBD MarketSurge chart analysis.](https://marketsurge.investors.com/)  
+在 10 月 15 日创下历史新高后，Tradeweb 股价回落至 10 周线，目前正在该线寻求支撑。根据 [IBD MarketSurge 图表分析](https://marketsurge.investors.com/)，在周线图上，股价以 136.13 [买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)形成[平坦底部](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/)。
 
 
-[IBD's New Exposure Levels](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+Aggressive investors could use a move above today's high of 131.70 as a [trendline early entry](https://www.investors.com/how-to-invest/investors-corner/trendline-entries-in-stock-charts-could-double-your-profits/). Shares rallied more than 2% Tuesday midday, placing the stock above the early buy trigger.  
+激进的投资者可能会利用突破今天的高点 131.70 作为[提前进入趋势线](https://www.investors.com/how-to-invest/investors-corner/trendline-entries-in-stock-charts-could-double-your-profits/)。周二午盘，股价上涨超过 2%，使该股高于早盘买入触发点。
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+Bullishly, the stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) is bouncing back sharply in recent sessions, a sign that the stock is again beating the performance of the S&P 500.  
+看涨方面，该股的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/)在最近几个交易日大幅反弹，这表明该股再次跑赢标准普尔 500 指数的表现。
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+Amid strong price action over the last two years, [Tradeweb stock](https://research.investors.com/stock-checkup/nasdaq-tradeweb-markets-tw.aspx) boasts a perfect 99 [IBD Composite Rating,](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/). Tradeweb also joined [IBD Leaderboard's Leaders list](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) during Tuesday's bullish action. That makes the AI stock one of the best ideas to watch right now.  
+根据 [IBD Stock Checkup](https://research.investors.com/stock-checkup/) 的数据，在过去两年强劲的价格走势中，[Tradeweb 股票](https://research.investors.com/stock-checkup/nasdaq-tradeweb-markets-tw.aspx)拥有完美的 [99 IBD 综合评级](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)。在周二的看涨行动中，Tradeweb 也加入了 [IBD 排行榜的领导者名单](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)。这使得 AI 股票成为目前最值得关注的想法之一。
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+---
+
+
+[**Nvidia, Apple And Tesla Highlight How To Handle This Market  
+英伟达、苹果和特斯拉强调如何应对这一市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+
+
+
+
+---
+
+
+*Follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://www.twitter.com/IBD_SLehtonen) for more on the best stocks to buy and watch and the Dow Jones Industrial Average.  
+在 [X at @IBD\_SLehtonen](https://www.twitter.com/IBD_SLehtonen) 上关注 Scott Lehtonen，了解有关最值得购买和关注的股票以及道琼斯工业平均指数的更多信息。*
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[IBD's New Exposure Levels  
+IBD 的新暴露水平](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[Top Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
